fix: incorrect extraction of empty text or text component with only hover/click event